--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
                   </div>
                </div>
                <div class="col-md-10 offset-md-1 ">
-                  <form id="request" class="main_form">
+                  <form id="request" class="main_form" action="https://formspree.io/f/mbjevvrk"
+  method="POST">
                      <div class="row">
                         <div class="col-md-6 ">
                            <input class="contactus" placeholder="Full Name" type="type" name=" Name"> 
@@ -325,7 +326,8 @@
                            <textarea class="textarea" placeholder="Message" type="type" Message="Name"></textarea>
                         </div>
                         <div class="col-md-12">
-                           <button class="send_btn">Send</button>
+                           <!-- <button >Send</button> -->
+                           <button type="submit" class="send_btn">Send</button>
                         </div>
                      </div>
                   </form>
